# 23308060610328ApliNGR

./: .gitignore  README.md  noseetc.py  pyproject.toml
src/: main.py
src/controllers/: TareasController.py  UserController.py  UsiarioController.py
src/database/: tablas.sql
src/modelos/: Tareas.py  Usuario.py  UsuarioModel.py  schemasModel.py
src/models/: TareasModel.py  UserModel.py  databaseModel.py  schemasModel.py
src/views/: Dashboard.py  LoginViews.py
